perf(aeron): remove duplicate command and fact allocations